test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_wrong_type_nested_static.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  long
  int
  identifier(nested)
  [
  const int(1)
  ]
  [
  const int(2)
  ]
  =
  {
  string literal("a")
  }
  ;
  return
  const int(0)
  ;
  }
